Fixed the issue where the rangeContainer was too wide.

--- a/default.css
+++ b/default.css
@@ -149,8 +149,7 @@ body {
   }
   .rangeContainer {
     border: solid #282c34 1px;
-    padding: 5px;
-    margin: 5px;
+    margin-bottom: 5px;
     width: 100%;
     border-radius: 10px;
   }
@@ -208,5 +207,6 @@ body {
     margin-left: 5px;
   }
   .showError {
-    border: solid red 1px;
+    border: solid red 2px;
+    border-radius: 10px;
   }
